--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li>
             <p class="main-menu-labels">Products</p>
             <!-- Products Sub Menu -->
-            <ul class="sub-menu">
+            <ul class="sub-menu hide">
               <li>Shampoo</li>
               <li>Conditioner</li>
               <li>Styling Gels</li>
@@ -24,14 +24,14 @@
           <li>
             <p class="main-menu-labels">Services</p>
             <!-- Services Sub Menu -->
-            <ul class="sub-menu">
+            <ul class="sub-menu hide">
               <li>Haircut</li>
               <li>Hair Color</li>
               <li>Highlights</li>
             </ul>
           </li>
           <li>
-            <p class="main-menu-labels">Company</p>
+            <p class="main-menu-labels hide">Company</p>
             <!-- Company Sub Menu -->
             <ul class="sub-menu">
               <li>About Us</li>
