Add JS to toggle sub-menu on hover

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             </ul>
           </li>
           <li>
-            <p class="main-menu-labels hide">Company</p>
+            <p class="main-menu-labels">Company</p>
             <!-- Company Sub Menu -->
-            <ul class="sub-menu">
+            <ul class="sub-menu hide">
               <li>About Us</li>
               <li>Locations</li>
               <li>Contact Us</li>
