Try and fail to fix sub-menu visibility

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <!-- Main Menu -->
         <ul class="main-menu">
-          <li>
+          <li class="main-all">
             <p class="main-menu-labels">Products</p>
             <!-- Products Sub Menu -->
             <ul class="sub-menu hide">
@@ -21,7 +21,7 @@
               <li>Styling Gels</li>
             </ul>
           </li>
-          <li>
+          <li class="main-all">
             <p class="main-menu-labels">Services</p>
             <!-- Services Sub Menu -->
             <ul class="sub-menu hide">
@@ -30,7 +30,7 @@
               <li>Highlights</li>
             </ul>
           </li>
-          <li>
+          <li class="main-all">
             <p class="main-menu-labels">Company</p>
             <!-- Company Sub Menu -->
             <ul class="sub-menu hide">
